<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CardView</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="header_title">This is a header</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_actvity">TruGamerz</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Events</string>
    <string name="title_section3">Me</string>
    <string name="title_activity_event_details_fragment">Event Details</string>

    <string-array name="list_events_items">
        <item>Events I Am Attending</item>
        <item>Event Invitations</item>
        <item>Recent Events</item>
        <item>Find Friends</item>
        <item>Share My Profile</item>
        <item>Tell Friends About This App</item>
        <item>Send Feedback</item>
        <item>About Us</item>
        <item>Settings</item>
    </string-array>
    <string-array name="list_events_me">
        <item>Find Friends</item>
        <item>Share My Profile</item>
        <item>Tell Friends About This App</item>
    </string-array>
    <string-array name="list_events_misc">
        <item>Send Feedback</item>
        <item>About Us</item>
        <item>Settings</item>
    </string-array>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <string-array name="grid_items">
        <item>Search</item>
        <item>Send Feedback</item>
        <item>About Us</item>
        <item>Settings</item>
    </string-array>

    <string name="lorem">Themes and styles also help keep your document coordinated.
        When you click Design and choose a new Theme, the pictures, charts, and SmartArt graphics change
        to match your new theme. When you apply styles, your headings change to match the new theme.</string>
    <string name="suggested_label">Suggested Events</string>
    <string name="io_error">Input/Output error</string>
    <string name="decode_error">Image can\'t be decoded</string>
    <string name="network_denied_error">Downloads are denied</string>
    <string name="memory_error">Out Of Memory error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="no_events_label">No Events Found</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="feedback">Feedback</string>
    <string name="favorites">Favorites</string>
    <string name="wish_list">Wish List</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="add_fav">Add To Favorites</string>
    <string name="join">Join</string>
    <string name="add_wish_list">Add to Wishlist</string>
    <string name="events_am_attending">Events I Am Attending</string>
    <string name="events_attended">Events Attended</string>
    <string name="event_invitation">Event Invitations</string>
    <string name="recent_events">Recent Events</string>
    <string name="find_friends">Find Friends</string>
    <string name="share_profile">Share My Profile</string>
    <string name="title_activity_profile_actions">ProfileActionsActivity</string>
    <string name="notifications">Notifications</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="title_event_list">Events</string>
    <string name="title_event_detail">Event Detail</string>
    <string name="t_cs">Terms and Conditions</string>

    <!-- Menu Items For The Grid -->
    <string-array name="menu_item_names">
        <item>Popular</item>
        <item>Top Hits</item>
        <item>Promos</item>
        <item>Upcoming</item>
        <item>Organizers</item>
        <item>Gallery</item>
        <item>Submit</item>
        <item>Promos</item>
        <item>About</item>
    </string-array>
    <string-array name="menu_item_icons">
        <item>@drawable/ic_action_assessment</item>
        <item>@drawable/ic_action_trending_up</item>
        <item>@drawable/ic_social_notifications</item>
        <item>@drawable/ic_action_assignment</item>
        <item>@drawable/ic_image_portrait</item>
        <item>@drawable/ic_image_photo_camera</item>
        <item>@drawable/ic_action_submit_event</item>
        <item>@drawable/ic_action_grade</item>
        <item>@drawable/ic_action_info</item>
    </string-array>

    <string name="title_activity_search">Search</string>
<!-- Twitter Credentials   -->
    <string name="twitter_api_secret">zIqfnjGV0VXYnOsYuBDP14anTvg1BtBUOSw8GkjQKv11nQbvKA</string>
    <string name="twitter_api_key"> K0v1DOIqT7oL1hCmICtJDn0uj</string>
    <string name="oauth_access_token"> 230804941-nAyjgUkYK1oxxgPlG8IZz29zKIABfgosH8mhj0tA</string>
    <string name="oauth_access_token_secret">dBsnmF7rMkfSvgL54ssfu0pR6jhnTrR8Qgmo45nGM0IUA</string>
</resources>
