<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/grey"
        >


        <FrameLayout
            android:id="@+id/profile_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/profile_background"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/profile_pic"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_display_name"
                android:gravity="center_vertical"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"/>

        </FrameLayout>


        <LinearLayout
            android:id="@+id/friends_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/profile_view"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/followers"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_weight="1"
                android:id="@+id/profile_followers"
                android:background="@drawable/profile_list_buttons"

                />

            <TextView
                android:layout_width="1dp"
                android:layout_height="48dp"
                android:background="@color/grey"
                />

            <TextView
                android:text="@string/following"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/profile_following"
                android:background="@drawable/profile_list_buttons"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/my_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/friends_layout"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/light_grey"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:text="@string/notifications"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingLeft="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:id="@+id/profile_notifications"
                    android:background="@drawable/profile_list_buttons"
                    />

                <TextView
                    android:background="@color/grey"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_caret_right"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <TextView
                    android:text="@string/events_am_attending"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:paddingLeft="10dp"
                    android:id="@+id/profile_events_am_attending"
                    android:background="@drawable/profile_list_buttons"
                    />

                <TextView
                    android:background="@color/grey"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_caret_right"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <TextView
                    android:text="@string/events_attended"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:paddingLeft="10dp"
                    android:id="@+id/profile_events_attended"
                    android:background="@drawable/profile_list_buttons"
                    />

                <TextView
                    android:background="@color/grey"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_caret_right"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <TextView
                    android:text="@string/event_invitation"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:paddingLeft="10dp"
                    android:id="@+id/profile_event_invitations"
                    android:background="@drawable/profile_list_buttons"
                    />

                <TextView
                    android:background="@color/grey"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_caret_right"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <TextView
                    android:text="@string/recent_events"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:paddingLeft="10dp"
                    android:id="@+id/profile_recent_events"
                    android:background="@drawable/profile_list_buttons"

                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_caret_right"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>


            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_account"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/grey"
            android:orientation="vertical"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <TextView
                    android:text="@string/find_friends"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:paddingLeft="10dp"
                    android:id="@+id/profile_find_friends"
                    android:background="@drawable/profile_list_buttons"

                    />

                <TextView
                    android:background="@color/grey"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/caret"
                    android:src="@drawable/ic_caret_right"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <TextView
                    android:text="@string/share_profile"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:paddingLeft="10dp"
                    android:id="@+id/profile_share_my_profile"
                    android:background="@drawable/profile_list_buttons"
                    />

                <TextView
                    android:background="@color/grey"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_caret_right"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <TextView
                    android:text="@string/about"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:paddingLeft="10dp"
                    android:id="@+id/profile_settings"
                    android:background="@drawable/profile_list_buttons"
                    />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_caret_right"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>


            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>
</ScrollView>
