<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.iconasystems.christo.fragments.HomeFragment"
            android:orientation="horizontal">

            <android.support.v4.view.ViewPager
                android:id="@+id/pager_trending"
                android:layout_height="300dp"
                android:layout_width="match_parent"

                >
            </android.support.v4.view.ViewPager>

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/circle_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:radius="4dp"
                app:fillColor="@color/dim_foreground_material_dark"
                app:strokeColor="@color/dim_foreground_disabled_material_light"
                android:layout_below="@+id/pager_trending"
                android:layout_alignParentTop="true"
                android:layout_marginTop="280dp"
                />

            <org.lucasr.twowayview.widget.TwoWayView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_below="@id/circle_indicator"
                android:id="@+id/grid_menu"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="@color/white"
                style="@style/TwoWayView"
                app:twowayview_layoutManager="GridLayoutManager"
                app:twowayview_numColumns="3"
                app:twowayview_numRows="3"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <TextView
                android:text="@string/about"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:paddingLeft="10dp"
                android:id="@+id/about"
                android:background="@drawable/profile_list_buttons"
                />

            <TextView
                android:background="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_caret_right"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <TextView
                android:text="@string/feedback"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:paddingLeft="10dp"
                android:id="@+id/feedback"
                android:background="@drawable/profile_list_buttons"
                />

            <TextView
                android:background="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_caret_right"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <TextView
                android:text="@string/t_cs"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:paddingLeft="10dp"
                android:id="@+id/profile_events_am_attending"
                android:background="@drawable/profile_list_buttons"
                />

            <TextView
                android:background="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_caret_right"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>


        </RelativeLayout>
    </LinearLayout>
</ScrollView>
